Modifed Tech Stack Section

--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,7 @@ header.sticky .nav-links a {
   align-items: center;
   justify-content: center;
   background-color: var(--white);
-  border: 1px solid var(--grayStock);
+  border: 1px dashed var(--grayStock);
   border-radius: 0.5rem;
   padding: 1rem;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -294,7 +294,9 @@ header.sticky .nav-links a {
 /* Hover Effects */
 .skill-box:hover {
   /*transform: translateY(-5px);*/
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: var(--blackMain);
+  border: 1px solid var(--grayStock);
 }
 
 .footer{
