--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ header.sticky .nav-links a:hover {
 /* Hover Effects */
 .skill-box:hover {
   /*transform: translateY(-5px);*/
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   color: var(--blackMain);
   border: 1px solid var(--redStock);
   transition: all 0.1s ease-in-out 0.1s;
@@ -514,6 +514,20 @@ header.sticky .nav-links a:hover {
   .projects-grid {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
+}
+
+/* Contact Section */
+#contact {
+  padding: 5rem 2rem 0rem 2rem;
+  background-color: var(--pureWhite);
+  text-align: center;
+  height: 50vh;
+}
+
+#contact h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: var(--blackMain);
 }
 
 .footer{
